added  charset in head, added header/footer tags,

--- a/store.html
+++ b/store.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <meta name="description" content="This is the description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Our Store</title>
 </head>
 
 <body>
-
+    <header>
         <nav class="nav">
             <ul>
                 <li><a>HOME</a></li>
@@ -17,7 +18,7 @@
             </ul>
         </nav>
         <h1 class="band-name">Our band</h1>
-
+    </header>
     <main>
         <h2 class="section-header">Click on an album to add it to the cart!</h2>
         <div class="wrapper">
@@ -58,8 +59,8 @@
 
         </div>
     </main>
-
+    <footer>
       <p>Prouldy made by ACIT 1620 students - Winter 2021</p>
-
+    </footer>
 </body>
 </html>
