created folders, linked css and JS, added alts to images,

--- a/store.html
+++ b/store.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="description" content="This is the description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <script defer src="./JS/Javascript.js"></script>
+    
     <title>Welcome to Our Store</title>
 </head>
 
@@ -17,7 +20,7 @@
                 <li><a>ABOUT</a></li>
             </ul>
         </nav>
-        <h1 class="band-name">Our band</h1>
+        <h1 class="band-name">Farmily</h1>
     </header>
     <main>
         <h2 class="section-header">Click on an album to add it to the cart!</h2>
@@ -25,22 +28,22 @@
             <section class="shop-items">
                 <div class="shop-item">
                     <span>Album 1</span>
-                    <img class="shop-item-image" id="Album 1">
+                    <img class="shop-item-image" id="Album 1" alt="Album one image.">
                 </div>
 
                 <div class="shop-item">
                     <span>Album 2</span>
-                    <img class="shop-item-image" id="Album 2">
+                    <img class="shop-item-image" id="Album 2" alt="Album two image.">
                 </div>
 
                 <div class="shop-item">
                     <span>Album 3</span>
-                    <img class="shop-item-image" id="Album 3">
+                    <img class="shop-item-image" id="Album 3" alt="Album three image.">
                 </div>
 
                 <div class="shop-item">
                     <span>Album 4</span>
-                    <img class="shop-item-image" id="Album 4">
+                    <img class="shop-item-image" id="Album 4" alt="Album four image.">
                 </div>
 
             </section>
