--- a/store.html
+++ b/store.html
@@ -6,8 +6,10 @@
     <meta name="description" content="This is the description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/styles.css">
-    <script defer src="./JS/Javascript.js"></script>
-    
+    <script defer src="./Scripts/app.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Welcome to Our Store</title>
 </head>
 
@@ -16,7 +18,7 @@
         <nav class="nav">
             <ul>
                 <li><a>HOME</a></li>
-                <li><a href="store.html">STORE</a></li>
+                <li><a class="active" href="store.html">STORE</a></li>
                 <li><a>ABOUT</a></li>
             </ul>
         </nav>
@@ -26,24 +28,24 @@
         <h2 class="section-header">Click on an album to add it to the cart!</h2>
         <div class="wrapper">
             <section class="shop-items">
-                <div class="shop-item">
-                    <span>Album 1</span>
-                    <img class="shop-item-image" id="Album 1" alt="Album one image.">
+                <div class="shop-item" id="shop1">
+                    <span>Album 1</span><br>
+                    <img class="shop-item-image" id="Album 1" alt="Album one image." src="Images/Album1.png">
                 </div>
 
-                <div class="shop-item">
-                    <span>Album 2</span>
-                    <img class="shop-item-image" id="Album 2" alt="Album two image.">
+                <div class="shop-item" id="shop2">
+                    <span>Album 2</span><br>
+                    <img class="shop-item-image" id="Album 2" alt="Album two image." src="Images/Album2.png">
                 </div>
 
-                <div class="shop-item">
-                    <span>Album 3</span>
-                    <img class="shop-item-image" id="Album 3" alt="Album three image.">
+                <div class="shop-item" id="shop3">
+                    <span>Album 3</span><br>
+                    <img class="shop-item-image" id="Album 3" alt="Album three image." src="Images/Album3.png">
                 </div>
 
-                <div class="shop-item">
-                    <span>Album 4</span>
-                    <img class="shop-item-image" id="Album 4" alt="Album four image.">
+                <div class="shop-item" id="shop4">
+                    <span>Album 4</span><br>
+                    <img class="shop-item-image" id="Album 4" alt="Album four image." src="Images/Album4.png">
                 </div>
 
             </section>
